--- a/public/stylesheets/reset.less
+++ b/public/stylesheets/reset.less
@@ -34,6 +34,11 @@
     vertical-align: middle;
 }
 
+.center-images {
+    .flex-display();
+    .align-items(center);
+}
+
 // Visibility
 
 .hidden {
