--- a/views/blog/blogLayout.ejs
+++ b/views/blog/blogLayout.ejs
@@ -8,7 +8,7 @@
 	<body>
 		<% include ../header %> <!-- The top bar for the site -->
 		<div class="blog-post">	
-			<section class="section white-black section-xlarge">
+			<section class="section grey section-xlarge">
 				<div class="background-media">
 					<% if (image == "default") { %>
 						<img src="/images/blog/default.png" class="bg blur">
@@ -32,7 +32,7 @@
 				</div>
 			</section>
 			<article class="page">
-				<section class="section black-white section-normal has-top">
+				<section class="section white section-normal has-top">
 					<div class="background-media"></div>
 					<div class="background-overlay"></div>
 					<div class="container">
