--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -26,7 +26,7 @@
 						<ul class="list-unstyled blog-list">
 							<% blogData.blogs.forEach(function (blog) { %>
 								<li class="col-md-4">
-									<div class="grid-post white-black">
+									<div class="grid-post">
 										<article id="<%= blog.id %>" class="post post-showinfo">
 											<a href="/blog/<%= blog.url %>" title="<%= blog.title %>">
 											<div class="post-media overlay">
