--- a/views/company.ejs
+++ b/views/company.ejs
@@ -19,20 +19,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-9 center">
-						<header class="small-header text-left underline underline-company small-margin-bottom">
-							<h1 class="headline text-small hairline">Our Story</h1>
-						</header>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-9 center">
 						<div class="row">
 							<div class="col-md-5">
 								<h3>Why We're Here...</h3>
 								<p>Roadmunk was built out of the founders frustration to create well designed roadmaps quickly for our stakeholders. We believed that software could replace spreadsheets and simplify the process of roadmapping to communicate our ongoing strategy.</p>
 							</div>
 							<div class="col-md-7 col-md-push-1">
-								<h3>And Where We're Headed</h3>
+								<h3>Our Philosophy</h3>
 								<p>Over time we’ve learned that organizations build roadmaps of all shapes and sizes. Roadmaps can be created for sprint planning, projects, release planning, entire product life cycles and much more. Therefore, product roadmapping is not a one size fits all exercise and our goal became clear: to enable the creation of beautiful and insightful roadmaps quickly.</p>
 							</div>
 						</div>
@@ -45,7 +38,7 @@
 			<div class="background-overlay"></div>
 			<div class="container-fluid">
 				<header class="section-header small text-center underline">
-					<h1 class="headline text-large xsmall-margin-bottom hairline">Partners</h1>
+					<h1 class="headline text-large xsmall-margin-bottom hairline">Partners and Investors</h1>
 				</header>
 				<div class="row">
 					<div class="col-md-12 text-center">
