--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -1,5 +1,14 @@
 .home {
 
+  .download {
+    font-size: 60px;
+    opacity: 0.8;
+    color: @admin-green;
+    &:hover {
+      .animation(1s download infinite linear);
+    }
+  }
+
   .browser {
     width     : 100%;
     max-width : 857px;
