--- a/views/features.ejs
+++ b/views/features.ejs
@@ -58,7 +58,7 @@
 							</header>
 						</div>
 						<div id="feature_2_img" class="col-md-6 features-text-left transparent">
-							<img src="/images/publish-export-cs.png">
+							<img src="/images/fit-to-powerpoint-live.png">
 						</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 							</header>
 						</div>
 						<div id="feature_5_img" class="col-md-6 features-right features-text-right transparent">
-							<img src="/images/permissions.png">
+							<img src="/images/permissions-live.png">
 						</div>
 					</div>
 				</div>
@@ -134,7 +134,7 @@
 							</header>
 						</div>
 						<div id="feature_6_img" class="col-md-6 features-text-left transparent">
-							<img src="/images/publish-print-cs.png">
+							<img src="/images/a4-legal-live.png">
 						</div>
 					</div>
 				</div>
