--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -14,7 +14,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/styleguide" title="Style Guide">
+					<a href="/style-guide" title="Style Guide">
 						Style Guide
 					</a>
 				</li>
