--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,8 @@
 						<p class="get-smaller">Start building insightful visualizations for your audience.</p>
 					</header>
 				</div>
-				<div class="col-lg-6 text-center">
-					<img class="landing-image" src="/images/macbook-header.png">
+				<div class="col-lg-6 text-center animated fadeInRightBig">
+					<img class="landing-image" src="/images/macbook-header-live.png">
 				</div>
 			</div>
 			<div class="row">
@@ -39,20 +39,27 @@
 						<ul class="list-unstyled image-list">
 							<li class="col-md-4 small-margin-top">
 								<img src="/images/icon-clock-cogs.png" width="200" height="200">
-								<div class="col-md-10 center">
-									<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
+								<div class="row">
+									<div class="col-md-10 center">
+										<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
+									</div>
 								</div>
 							</li>
 							<li class="col-md-4 small-margin-top">
-								<img class="home-svg" src="/images/pencils.svg" width="150" height="150">
-								<div class="col-md-10 center">
-									<h3 class="text-center font-normal text-get-smaller">Colorize And Stylize To Match Your Brand</h3>
+								<img class="home-svg" src="/images/pencils.svg" width="165" height="165">
+								<div class="row">
+									<div class="col-md-10 center">
+										<h3 class="text-center font-normal text-get-smaller">Colorize And Stylize To Match Your Brand</h3>
+									</div>
 								</div>
 							</li>
 							<li class="col-md-4 small-margin-top">
-								<img src="/images/icon-imac-roadmap2.png" width="200" height="200">
-								<div class="col-md-12 center">
-									<h3 class="text-center font-normal text-get-smaller">Download Your Presentation Ready Roadmap</h3>
+								<img src="/images/icon-imac-roadmap-live.png" width="200" height="200">
+								<!--<span class="glyphicon glyphicon-arrow-down download"></span>-->
+								<div class="row">
+									<div class="col-md-12 center">
+										<h3 class="text-center font-normal text-get-smaller">Download Your Presentation Ready Roadmap</h3>
+									</div>
 								</div>
 							</li>
 						</ul>
