--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
 						<p class="get-smaller">Start building insightful visualizations for your audience.</p>
 					</header>
 				</div>
-				<div class="col-lg-6 text-center animated fadeInRightBig">
+				<div class="col-lg-6 text-center animated fadeInRight">
 					<img class="landing-image" src="/images/macbook-header-live.png">
 				</div>
 			</div>
