--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -48,7 +48,7 @@
 						<div class="border"></div>
 						<div class="cost">
 							<p>&#36;
-								<span id="businessPrice" class="price">19</span>
+								<span id="businessPrice" class="price">29</span>
 								<span class="subheader1">a user per month</span>
 								<span class="subheader2">billed annually</span>
 							</p>
@@ -223,21 +223,6 @@
 				</td>
 			</tr>
 			<tr>
-				<th>Download Roadmap HTML&#42;</th>
-				<td>
-					<span class="pricing-x glyphicon glyphicon-remove"></span>
-				</td>
-				<td>
-					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
-				</td>
-				<td>
-					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
-				</td>
-				<td>
-					<span class="pricing-checkmark glyphicon glyphicon-ok"></span>
-				</td>
-			</tr>
-			<tr>
 				<th>Secure Private Cloud</th>
 				<td>
 					<span class="pricing-x glyphicon glyphicon-remove"></span>
@@ -275,7 +260,7 @@
 				<td>Premium Phone &#38; Email</td>
 			</tr>
 			<tr>
-				<th>Coming Soon</th>
+				<th>Upcoming</th>
 				<td>
 					&nbsp;
 				</td>
